# 2048

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Resource.qrc  azure-pipelines.yml
.github/workflows/: build.yml
Include/: Common.h  MainWindow.h  Pch.h
Language/: 2048_zh_CN.qm  2048_zh_CN.ts
Source/: Common.cpp  Main.cpp  MainWindow.cpp
Ui/: MainWindow.ui
src/: init.cpp  init.h  main.cpp  pch.h  utility.cpp  utility.h
